--- a/public/stylesheets/finance/fees_submission_batch.css
+++ b/public/stylesheets/finance/fees_submission_batch.css
@@ -287,3 +287,21 @@ table#listing td.col-8 {
     width: 10%;
     text-align: right;
 }
+
+.pay_fees_buttons{
+    clear: both;
+
+}
+
+.pay_fees_buttons a{
+    float: right !important;
+    margin: 20px 10px 0 !important;
+}
+.pay_fees_buttons input{
+    float: right;
+}
+
+.pay_fees .label-field-pair2{
+    float: right;
+    margin-top: 15px;
+}
