--- a/public/stylesheets/rtl/finance/pay_fees_defaulters.css
+++ b/public/stylesheets/rtl/finance/pay_fees_defaulters.css
@@ -262,3 +262,21 @@ table#listing td a:hover {
     text-decoration: none;
     background:  #373B3F;
 }
+
+.pay_fees_buttons{
+    clear: both;
+
+}
+
+.pay_fees_buttons a{
+    float: left !important;
+    margin: 25px 10px 0 !important;
+}
+.pay_fees_buttons input{
+    float: left;
+}
+
+.pay_fees .label-field-pair2{
+    float: left;
+    margin-top: 15px;
+}
