--- a/app/views/batch_transfers/_new.html.erb
+++ b/app/views/batch_transfers/_new.html.erb
@@ -41,12 +41,12 @@
   </div>
 
     <div class="label-field-pair">
-    <div class="label-container"><%= f.label :max_weekly_classes %></div>
+    <div class="label-container"><%= f.label "#{t('max_weekly_class')}" %></div>
     <div class="input-container"> <%= f.text_field :max_weekly_classes %></div>
     </div>
 
   <div class="label-field-pair">
-    <div class="label-container"><%= f.label :no_exam %></div>
+    <div class="label-container"><%= f.label "#{t('no_exam')}" %></div>
     <div class="input-container"><%= f.check_box :no_exams %></div>
   </div>
 
