feature => display of receipt number in student fees report , donations report, income list and pdf, expense list and pdf
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1219 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/income_list_pdf.erb
+++ b/app/views/finance/income_list_pdf.erb
@@ -33,7 +33,7 @@
     </div>
     <div id="pdf-info">
       <table id="pdf-table" width="100%" cellspacing="0">
-        <tr class="table-header"><td class="col-pdf"><%= t('sl_no') %></td><td class="col-pdf"> <%= t('name') %> </td><td class="col-pdf"> <%= t('description') %> </td><td class="col-pdf"><%= "#{t('amount')}( #{currency})" %></td><td class="col-pdf"> <%= t('transaction_date') %></td></tr>
+        <tr class="table-header"><td class="col-pdf"><%= t('sl_no') %></td><td class="col-pdf"> <%= t('name') %> </td><td class="col-pdf"> <%= t('description') %> </td><td class="col-pdf"> <%= t('receipt_no') %> </td><td class="col-pdf"><%= "#{t('amount')}( #{currency})" %></td><td class="col-pdf"> <%= t('transaction_date') %></td></tr>
         <% index = 0 %>
         <% total = 0 %>
         <% i = 0 %>
@@ -44,6 +44,7 @@
             <td class="col-pdf"><%= index+=1 %></td>
             <td class="col-pdf"><%= d.title %></td>
             <td class="col-pdf"><%= d.description %></td>
+            <td class="col-pdf"><%= d.receipt_no %></td>
             <td class="col-pdf"><%= d.amount %></td>
             <td class="col-pdf"><%= d.transaction_date.strftime("%d-%m-%y") unless d.transaction_date.nil?%></td>
           </tr>
