--- a/app/views/finance/batch_fees_report.html.erb
+++ b/app/views/finance/batch_fees_report.html.erb
@@ -33,7 +33,8 @@
   <div id="fees-table">
     <div class="fees-th">
       <div class="fees-table-description"><p> <%= t('student_name') %> </p></div>
-      <div class="fees-table-expenses"> <%= t('amount') %> </div>
+      <div class="fees-table-income"> <%= t('amount') %> </div>
+      <div class="fees-table-receipt-no"> <%= t('receipt_no') %> </div>
       <div class="fees-table-date"> <%= t('date_text') %> </div>
     </div>
     <% @transaction.each do |f| %>
@@ -42,6 +43,7 @@
             <% student = f.student_payee %>
               <div class="fees-table-description"><%= "#{student.full_name}- (#{student.batch.full_name})" %></div>
               <div class="fees-table-income"> <%= f.amount %> </div>
+              <div class="fees-table-receipt-no"> <%= f.receipt_no %> </div>
               <div class="fees-table-date"> <%= f.transaction_date.strftime("%m-%d-%Y") %> </div>
             </div>
             <% total += f.amount %>
