--- a/app/views/finance/donations_report.html.erb
+++ b/app/views/finance/donations_report.html.erb
@@ -28,29 +28,31 @@
 
 <div id="page-yield">
 
-  <%donations_income=0%>
-  <%donations_expenses=0%>
+  <% donations_income = 0 %>
+  <% donations_expenses = 0 %>
 
   <table id="listing">
     <tr class="tr-head">
       <td><%= t('description') %></td>
       <td><%= t('expense') %></td>
       <td><%= t('income') %></td>
+      <td><%= "#{t('receipt_or_voucher_no')}" %></td>
       <td><%= t('date_text') %></td>
     </tr>
     <% @donations.each do |d| %>
       <tr class="tr-<%= cycle('even','odd') %>">
-        <td class="col-2"><%=d.title %></td>
+        <td class="col-3"><%=d.title %></td>
         <% if d.master_transaction_id == 0  %>
-          <td></td>
-          <td class="col-2"><%=d.amount %></td>
+          <td class="col-5"></td>
+          <td class="col-5"><%=d.amount %></td>
           <% donations_income+= d.amount %>
         <% else %>
-          <td class="col-2"><%=d.amount.to_f %></td>
+          <td class="col-5"><%=d.amount.to_f %></td>
           <% donations_expenses+= d.amount %>
-          <td></td>
+          <td class="col-5"></td>
         <% end %>
-        <td class="col-2"><%=d.transaction_date.strftime("%m-%d-%Y") %></td>
+        <td class="col-1"><%= d.receipt_no.nil? ? d.voucher_no : d.receipt_no %></td>
+        <td class="col-5"><%=d.transaction_date.strftime("%m-%d-%Y") %></td>
       </tr>
     <% end %>
 
@@ -65,6 +67,7 @@
         <td> <%= donations_total %></td>
         <td></td>
       <% end %>
+      <td></td>
       <td></td>
     </tr>
 
