--- a/app/views/finance/income_list_update.erb
+++ b/app/views/finance/income_list_update.erb
@@ -37,6 +37,7 @@
       <tr class="tr-head">
         <td><%= t('name') %></td>
         <td><%= t('description') %></td>
+        <td><%= t('receipt_no') %></td>
         <td><%= t('amount') %></td>
         <td><%= t('transaction_date') %></td>
         <td></td>
@@ -45,6 +46,7 @@
         <tr class="tr-<%= cycle('odd','even') %>">
           <td class="col-3"><%= d.title %></td>
           <td class="col-3"><%= d.description %></td>
+          <td class="col-3"><%= d.receipt_no %></td>
           <td class="col-3"><%= d.amount %></td>
           <td class="col-3"><%= d.transaction_date.strftime("%d-%m-%y") unless d.transaction_date.nil?%></td>
           <td class="col-3"><small><%= link_to "#{t('edit_text')}",:action=>'income_edit',:id=>d.id %></small> | <small><%= link_to "#{t('delete_text')}",:action=>'delete_transaction',:id=>d.id %></small></td>
