--- a/public/stylesheets/finance/batch_fees_report.css
+++ b/public/stylesheets/finance/batch_fees_report.css
@@ -8,7 +8,7 @@
     height: 1.5em;
     list-style-type: none;
     padding: 0.5em 0 0 1em;
-    width: 700px;
+    width: 835px;
 }
 .fees-tr {
     background-color: #E7EEFF;
@@ -34,12 +34,14 @@
     width: 80px;
     padding: 0 0 0 41px;
     text-align:right;
+    height: 16px;
 }
 .fees-table-income {
     float:left;
     width: 120px;
     padding: 0 0 0 0px;
     text-align:right;
+    height: 16px;
 }
 .fees-table-date {
     float:right;
@@ -53,7 +55,7 @@
     border-bottom:1px solid #BECFFB;
     color : #444;
     height : auto;
-    width : 700px;
+    width : 835px;
     list-style-type : none;
     padding: 10px 0 10px 16px;
     font-size: 14px;
@@ -66,7 +68,7 @@
     border-bottom:1px solid #BECFFB;
     color : #444;
     height : auto;
-    width : 700px;
+    width : 835px;
     list-style-type : none;
     padding: 10px 0 10px 16px;
     font-size: 14px;
@@ -82,4 +84,11 @@
 }
 #transaction-report-title{
     margin-left:200px;
+}
+.fees-table-receipt-no{
+    float:left;
+    width: 120px;
+    padding: 0 0 0 0px;
+    text-align:center;
+    height: 16px;
 }
