bug fixed=> wrong path of stylesheets of pdf in rtl
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1220 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -27,7 +27,7 @@
     <%= stylesheet_link_tag(*get_stylesheets) %>
     <%= stylesheet_link_tag  @direction+"_layouts/pdf" %>
     <link rel="stylesheet" type="text/css" href="<%="#{RAILS_ROOT}/public/stylesheets/#{@direction}_layouts/pdf.css" %>" media="all" />
-    <link rel="stylesheet" type="text/css" href="<%="#{RAILS_ROOT}//public/stylesheets/#{@direction}#{get_stylesheets}.css"%>" media="all" />
+    <link rel="stylesheet" type="text/css" href="<%="#{RAILS_ROOT}/public/stylesheets/#{get_stylesheets}.css"%>" media="all" />
     <link rel="stylesheet" type="text/css" href="<%= "#{RAILS_ROOT}/public/stylesheets/#{@direction}_styles/ui.all.css"%>" media="all" />
 
 
