--- a/public/stylesheets/_layouts/dashboard.css
+++ b/public/stylesheets/_layouts/dashboard.css
@@ -46,7 +46,7 @@ body {
     padding: 0;
     list-style-type: none;
 }
-#main-menu li{
+#main-menu li.a{
     float: left;
 }
 #main-menu li a {
@@ -67,7 +67,7 @@ body {
 #main-menu li ul.level-1{
     margin: 0;
     padding: 0;
-    width : 140px;
+    width : auto;
     list-style-type: none;
     position: absolute;
     top: 60px;
@@ -95,7 +95,7 @@ body {
     text-indent: 5px;
     background: none;
     color: #ffffff;
-    width: 140px;
+    width: 100%;
     font-size: 14px;
     text-align: left;
     margin: 0;
@@ -109,10 +109,10 @@ body {
     margin: -1px 0 0 0;
     padding: 0;
     position: absolute;
-    left: 140px;
+    left: 135px;
     top: auto;
     visibility: hidden;
-    width: 140px;
+    width: 200px;
     list-style-type: none;
     z-index: 999;
     border : 1px solid black;
@@ -137,7 +137,7 @@ body {
     text-indent: 5px;
     background: none;
     color: #ffffff;
-    width: 140px;
+    width: 200px;
     font-size: 14px;
     text-align: left;
     margin: 0;
