--- a/app/views/elective_groups/show.html.erb
+++ b/app/views/elective_groups/show.html.erb
@@ -31,10 +31,11 @@
   </ul>
 </div>
 <div id="page-yield">
-
+  <div id="flash-box">
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  </div>
   <div class="bread_crumb">
     <%= link_to t('course_text'), courses_path %> &raquo;
     <%= link_to @course.full_name, @course %> &raquo;
