--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -27,9 +27,11 @@
 </div>
 
 <div id="page-yield">
+  <div id="flash-box">
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  </div>
 <div class="box">
 
   <div class="label-field-pair">
