--- a/public/stylesheets/finance/fee_discount_new.css
+++ b/public/stylesheets/finance/fee_discount_new.css
@@ -92,3 +92,15 @@
     margin-top: 20px;
 }
 
+#inner-tab-menu ul li {
+background-color:#9D0E00;
+color:#FFFFFF;
+float:left;
+font-size:0.9em;
+height:1.5em;
+list-style-type:none;
+margin:0 0 0 10px;
+padding:0;
+text-align:center;
+width:120px;
+}
