sreeshanth(style issues and translation issues )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1243 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/finance/salary_employee.html.erb
+++ b/app/views/finance/salary_employee.html.erb
@@ -50,7 +50,7 @@
         <% employee_id = payslip.first.active_or_archived_employee.class.to_s=="ArchivedEmployee" ?  payslip.first.active_or_archived_employee.former_id :  payslip.first.active_or_archived_employee.id %>
         <tr class="tr-<%= cycle("even","odd") %>">
           <td class ="col-1"><%=i+1%></td>
-          <td class="col-2"><%= link_to payslip.first.active_or_archived_employee.full_name + " - " , :action => 'employee_payslip_monthly_report',:id2 => salary_date.to_date,:id =>employee_id %> <%=salary_date.strftime("%B,%Y")%> </td>
+          <td class="col-2"><%= link_to payslip.first.active_or_archived_employee.full_name + " - " , :action => 'employee_payslip_monthly_report',:id2 => salary_date.to_date,:id =>employee_id %> <%= I18n.l(salary_date,:format=>"%B,%Y")%> </td>
           <%  amount = Employee.calculate_salary(payslip,individual_payslip_category)[:net_amount]%>
           <td class="col-3" align="right"> <%=  amount  %> </td>
           <td class="col-3"> <%=salary_date %> </td>
