--- a/app/views/news/index.erb
+++ b/app/views/news/index.erb
@@ -60,7 +60,7 @@
         <div id="news_search_result">
           <% link_value = r.title %>
           <%=  link_to link_value, :controller => "news", :action => "view", :id => r.id%><br/>
-          <small>posted <%= time_ago_in_words(r.created_at) %> ago</small>
+          <small><%= t('posted') %><%= time_ago_in_words(r.created_at) %><%= t('ago') %></small>
         </div>
       <%= '<div class="extender"></div>' if i%3 == 2 %>
       <% end %>
