--- a/public/stylesheets/finance/fee_discount_new.css
+++ b/public/stylesheets/finance/fee_discount_new.css
@@ -104,3 +104,13 @@ padding:0;
 text-align:center;
 width:120px;
 }
+.label-field-pair label {
+color:#444444;
+display:block;
+float:left;
+font-size:14px;
+font-weight:600;
+margin:0 0 0;
+padding-top:10px;
+width:250px;
+}
