--- a/app/views/exam/_exam_grade_form.erb
+++ b/app/views/exam/_exam_grade_form.erb
@@ -31,7 +31,7 @@
    <%= f.label "#{t('exam_type')}" %>
     <%= f.hidden_field :exam_type,:value=>@type %>
     <div class="text-input-bg">
-    <%= f.text_field :exam_type, :value=>@type=='Marks' ? t('marks_and_grades') : t('marks'),:disabled=>true %>
+    <%= text_field_tag "" , t(@type.underscore),:disabled=>true %>
     </div>  <%= link_to "#{t('change_type')}", new_batch_exam_group_path(@batch,:ename=>@name),:class=>"type_link" %>
   </div>
   <h4>
