sreeshanth(STYLE  issues  and translation issue)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1250 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/batch_transfers/_previous_batch_subjects.erb
+++ b/app/views/batch_transfers/_previous_batch_subjects.erb
@@ -23,7 +23,7 @@
     <div class="linker2">
 <%= link_to_remote "#{t('select_all')}", :url => { :controller=>'batch_transfers',:action => 'assign_all_previous_batch_subjects', :id => @batch} %>
 </div>
-    <h4 style="width:300px;"><%= t('normal_subject') %></h4>
+    <h4 style="width:300px;"><%= t('normal_subjects') %></h4>
   <% @previous_batch_normal_subject.each do |sub| %>
     <li id="prev-subject-name-<%=sub.id%>" class="list<%=cycle('odd', 'even')%>">
      <div class="category-name"> <%= sub.name %> </div>
