--- a/app/views/finance/_asset_list.html.erb
+++ b/app/views/finance/_asset_list.html.erb
@@ -21,7 +21,7 @@
   <tr class="tr-head">
     <td ><%= t('asset') %></td>
     <td><%= t('created_at') %></td>
-    <td>Total Amount</td>
+    <td><%= t('total_amount') %></td>
     <td></td>
   </tr>
 
