sreeshanth(STYLE  issues )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1251 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/student/_previous_subject.html.erb
+++ b/app/views/student/_previous_subject.html.erb
@@ -31,7 +31,7 @@
   <div class="text-input-bg"><%= s.text_field :mark %></div>
   <div class="extender"></div>
 </div>
-<div class="save-proceed-button" id="save-proceed-button">
+<div class="save-proceed-button1" id="save-proceed-button">
       <%= s.submit "► #{t('save')}"%>
     </div>
 
