--- a/app/views/payroll/add_category.erb
+++ b/app/views/payroll/add_category.erb
@@ -53,7 +53,7 @@
       <div class="label-field-pair">
         <label for="percentage_of"><%= t('percentage_of') %></label>
         <div class="text-input-bg">
-          <%= select :category, :payroll_category_id, @categories.map {|cat| [cat.name, cat.id]}, :prompt =>"Select" %>
+          <%= select :category, :payroll_category_id, @categories.map {|cat| [cat.name, cat.id]}, :prompt =>"#{t('select')}" %>
         </div>
       </div>
  <div class="label-radio-pair">
